tests/miniJava/neg/006191_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { true System.out.println ( { } ) ; } }
